# codex

./: README.md
.github/workflows/: ci.yml  render-to-reality-ci.yml
RenderToRealityApp/: .gitignore  Dockerfile  QUICKSTART.md  README.md  SOLUTION.md  cli.py  config.json.example  main.py  pyproject.toml  requirements.txt
RenderToRealityApp/.devcontainer/: devcontainer.json
RenderToRealityApp/scripts/: __init__.py  depth_to_mesh.py  mesh_metrics.py  openai_hooks.py  ratio_analysis.py
RenderToRealityApp/tests/: test_integration.py  test_mesh_metrics.py  test_ratio_analysis.py
auto3d/: __init__.py  __main__.py  app.py  automation.py  capabilities.py  cli.py  commands.py  printability.py  prompt.py  regulations.py  run.py  script_cli.py  setup.py  site.py  supercompute.py  tester.py  wizard.py
codex-cli/scripts/: build_npm_package.py
docs/: auto3d-pipeline.md  auto3d-readiness-checklist.md
docs/analysis/: INDEX.md  MISSING_MODULES_REPORT.md  QUICK_REFERENCE.txt  README.md  SOLUTION_SUMMARY.md  check_missing_modules.py  missing_imports_analysis.md
docs/audit_candidate/: account_recovery_guidance.md  evidence_bundle.json  plan.json  (+5 more)
scripts/: __init__.py  auto3d_cli.py  auto3d_do_it_for_me.py  auto3d_prompt_to_stl.py  auto3d_run.py  auto3d_setup.py  auto3d_test.py  merge_chatgpt_logs.py  stage_npm_packages.py  world_bank_outreach.py
tests/: test_auto3d_automation.py  test_auto3d_capabilities.py  test_auto3d_cli.py  test_auto3d_printability.py  test_auto3d_prompt_to_stl.py  test_auto3d_site.py  test_auto3d_supercompute.py  test_world_bank_outreach_cli.py
