[tool.pytest.ini_options]
addopts = "-q"
minversion = "7.0"
testpaths = ["tests"]
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "1JGM∞.BE" }]
dependencies = [
    "PyQt6",
    "opencv-python",
    "numpy",
    "Pillow",
    "trimesh",
    "openai",
    "torch",
]
description = "Drag-and-drop AI render to mesh pipeline with depth, analysis, and OpenAI hooks."
name = "render-to-reality"
requires-python = ">=3.9"
version = "0.1.0"
